# hunt_and_gather_cli

./: .gitignore  .sourcery.yaml  hunt_and_gather_cli.py  hunt_and_gather_data.md  hunt_and_gather_navigator.py  hunt_and_gather_skinner.py  hunt_and_gather_training.md  hunt_and_gather_trophy.py  hunt_and_tracker.py  hunter_unknown_handler.py  obsidian_class.py  qodana.yaml  test_HuntAndGatherCLI.py  test_HuntCLI___init__.py
hunt_and_gathercli/: .sourcery.yaml
hunt_and_gathercli/src/: __init__.py  main.py  pyproject.toml
hunt_and_gathercli/src/hunt_and_gather_database/: hunt_and_gather_commands_training.md
hunt_and_gathercli/src/modules/: hunt_and_gather_cli.py  hunt_and_gather_skinner.py  hunt_and_gather_trap.py  hunt_and_gather_trophy.py  hunt_and_tracker.py  hunter_unknown_handler.py  obsidian_class.py
src/: main.py
src/modules/: hunt_and_gather_cli.py  hunt_and_gather_navigator.py  hunt_and_gather_skinner.py  hunt_and_gather_trap.py  hunt_and_gather_trophy.py  hunt_and_tracker.py  hunter_unknown_handler.py  obsidian_class.py  pyproject.toml  test_HuntAndGatherCLI.py  test_HuntCLI___init__.py
